tests/ui-nightly/transmute-bound-dst-not-frombytes.stderr
error[E0433]: failed to resolve: could not find `transmute` in `zerocopy`
 --> tests/ui-nightly/transmute-bound-dst-not-frombytes.rs:9:57
  |
9 | const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = zerocopy::transmute!(AU16(0));
  |                                                         ^^^^^^^^^ could not find `transmute` in `zerocopy`
  |
help: zerocopy::transmute is not a macro, but a function, try to remove `!`
  |
9 - const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = zerocopy::transmute!(AU16(0));
9 + const DST_NOT_FROM_BYTES: NotZerocopy<AU16> = zerocopy::transmute(AU16(0));
  |
